[package]
name = "product-space"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18.0"

[dev-dependencies]
failure = "0.1.5"
structopt = "0.2.16"
csv = "1.1.1"
serde = { version = "1.0.94", features = ["derive"] }
